Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/IP_BatchLine__c.object-meta.xml
<CustomObject>
    <label>Batch Line</label>
    <nameField>
        <displayFormat>BL-{00000000}</displayFormat>
        <label>Batch Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>