Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/Batch_TYpe__c.field-meta.xml
<CustomField>
    <fullName>Batch_TYpe__c</fullName>
    <formula>IF((IP_BatchHeader__r.IP_BatchType__c == &apos;Shop Direct - Shaw&apos; || IP_BatchHeader__r.IP_BatchType__c == &apos;Shop Direct - Shaw Amendments&apos;),&apos;Shop Direct - Shaw Key&apos;,&apos;&apos;)</formula>
    <label>Batch TYpe</label>
    <type>Text</type>
</CustomField>