Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/Check_status__c.field-meta.xml
<CustomField>
    <fullName>Check_status__c</fullName>
    <label>Check status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>