Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_BatchHeader__c.field-meta.xml
<CustomField>
    <fullName>IP_BatchHeader__c</fullName>
    <label>Batch Header</label>
    <referenceTo>Batch_header__c</referenceTo>
    <relationshipLabel>Batch Lines</relationshipLabel>
    <relationshipName>Batch_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>