Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_CurrencyField1__c.field-meta.xml
<CustomField>
    <fullName>IP_CurrencyField1__c</fullName>
    <label>Currency field 1</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>