Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_DateField10__c.field-meta.xml
<CustomField>
    <fullName>IP_DateField10__c</fullName>
    <label>Date Field 10</label>
    <type>Date</type>
</CustomField>