Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_DateField1__c.field-meta.xml
<CustomField>
    <fullName>IP_DateField1__c</fullName>
    <label>Date Field 1</label>
    <type>Date</type>
</CustomField>