Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_DateField2__c.field-meta.xml
<CustomField>
    <fullName>IP_DateField2__c</fullName>
    <label>Date Field 2</label>
    <type>Date</type>
</CustomField>