Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_DateTimeField10__c.field-meta.xml
<CustomField>
    <fullName>IP_DateTimeField10__c</fullName>
    <label>Date Time field 10</label>
    <type>DateTime</type>
</CustomField>