Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_DateTimeField1__c.field-meta.xml
<CustomField>
    <fullName>IP_DateTimeField1__c</fullName>
    <label>DateTime field 1</label>
    <type>DateTime</type>
</CustomField>