Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_DateTimeField2__c.field-meta.xml
<CustomField>
    <fullName>IP_DateTimeField2__c</fullName>
    <label>DateTime field 2</label>
    <type>DateTime</type>
</CustomField>