Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_ErrorReason__c.field-meta.xml
<CustomField>
    <fullName>IP_ErrorReason__c</fullName>
    <label>Error Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>