Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_IntegerField1__c.field-meta.xml
<CustomField>
    <fullName>IP_IntegerField1__c</fullName>
    <label>Integer field 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>