Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_LinkField1__c.field-meta.xml
<CustomField>
    <fullName>IP_LinkField1__c</fullName>
    <label>Link Field 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>