Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_LinkField2__c.field-meta.xml
<CustomField>
    <fullName>IP_LinkField2__c</fullName>
    <label>Link Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>