Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_Number12d4Field10__c.field-meta.xml
<CustomField>
    <fullName>IP_Number12d4Field10__c</fullName>
    <label>Number 12,4 field 10</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>