Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_State__c.field-meta.xml
<CustomField>
    <fullName>IP_State__c</fullName>
    <defaultValue>&quot;Open&quot;</defaultValue>
    <label>State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>