Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_TextField10__c.field-meta.xml
<CustomField>
    <fullName>IP_TextField10__c</fullName>
    <label>Text field 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>