Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_TextField11__c.field-meta.xml
<CustomField>
    <fullName>IP_TextField11__c</fullName>
    <label>Text Field 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>