Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_TextField12__c.field-meta.xml
<CustomField>
    <fullName>IP_TextField12__c</fullName>
    <label>Text Field 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>