Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/IP_Warning__c.field-meta.xml
<CustomField>
    <fullName>IP_Warning__c</fullName>
    <description>if the line has processed but there was a warning it will be detailed here</description>
    <label>Warning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>