Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/fields/Job_Category__c.field-meta.xml
<CustomField>
    <fullName>Job_Category__c</fullName>
    <formula>IF(IP_BatchHeader__r.IP_BatchType__c = &apos;Shop Direct - Shaw Amendments&apos;, &apos;IB263&apos;,IF( IP_BatchHeader__r.IP_BatchType__c = &apos;Shop Direct - Shaw&apos;, &apos;IA223&apos;, &apos;&apos;))</formula>
    <label>Job Category</label>
    <type>Text</type>
</CustomField>