Frankbelford/uatv1ba/force-app/main/default/objects/IP_BatchLine__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IP_BatchHeader__c</columns>
    <columns>IP_Status__c</columns>
    <columns>IP_ErrorReason__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>